--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,19 @@ openai==1.3.7
 pandas==2.1.4
 chromadb==0.4.18
 python-dotenv==1.0.1
-tiktoken
-gspread
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
+tiktoken==0.5.2
+gspread==5.12.0
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
 openpyxl==3.1.2
-youtube-transcript-api
-pytube
+youtube-transcript-api==0.6.1
+pytube==15.0.0
 httpx==0.27.2
 python-docx==0.8.11
-tqdm==4.66.1  # For progress bars
+tqdm==4.66.1
 onnxruntime==1.16.3
 streamlit==1.31.1
-streamlit-chat==0.1.1
+numpy>=1.24.0
+typing-extensions>=4.5.0
+pydantic>=2.0.0
